# serializer version: 1
# name: TestAsciiDocGolden.test_asciidoc_with_formatting
  '''
  # Formatting Test Document

  ## Basic Formatting

  This paragraph contains **bold text**, *italic text*, and `inline code`.

  This paragraph has ***bold and italic text*** combined.

  ## All Heading Levels

  ### Level 3 Heading

  Content under level 3 heading.

  #### Level 4 Heading

  Content under level 4 heading.

  ##### Level 5 Heading

  Content under level 5 heading.

  ###### Level 6 Heading

  Content under level 6 heading.

  ## Advanced Formatting

  Text with <sup>superscript</sup> and <sub>subscript</sub>.

  Text with ~~strikethrough~~ content.

  ## Block Quote

  > This is a block quote with some important information. It can span multiple lines.

  ## Thematic Break

  ---

  Content after thematic break.
  '''
# ---
# name: TestAsciiDocGolden.test_asciidoc_with_lists
  '''
  # List Test Document

  ## Unordered List

  * First item
  * Second item
  * Third item
    - Nested item 1
    - Nested item 2
  * Fourth item

  ## Ordered List

  1. First item
  2. Second item
  3. Third item
     1. Nested ordered item 1
     2. Nested ordered item 2
  4. Fourth item

  ## Checklist

  * [x] Completed task
  * [ ] Pending task
  * [x] Another completed task

  ## Description List

  <dl>
    <dt>CPU</dt>
    <dd>The brain of the computer</dd>
    <dt>RAM</dt>
    <dd>Random Access Memory</dd>
    <dt>GPU</dt>
    <dd>Graphics Processing Unit</dd>
  </dl>

  ## Mixed Lists

  1. First ordered item

  * Nested unordered item
  * Another nested item

  1. Second ordered item
  '''
# ---
# name: TestLatexGolden.test_latex_basic_document
  '''
  # Introduction

  This paragraph contains

  **bold**

   and

  *italic*

   text.

  # Lists

  # Table

  | Name | Role | Score |
  |---|---|---|
  | Alice | Developer | 95 |
  | Bob | Designer | 88 |
  '''
# ---
# name: TestLatexGolden.test_latex_with_math
  '''

  Inline math such as

  $E = mc^2$

   should render properly.

  $$
  \int_0^1 x^2 \; dx = \frac{1}{3}
  $$

  $$

  f(x) &= x^2 + 2x + 1\\
  g(x) &= \frac{x^3}{3} - x\n
  $$
  '''
# ---
# name: TestOrgGolden.test_org_agenda_document
  '''
  # Implement feature A

  * \[ \] Write design
  * \[ \] Implement
  * \[ \] Review

  # Ship bug fixes

  # Notes

  Some inline `code` and **bold** text.

  | Task | Owner | Status |
  |---|---|---|
  | Feature A | Alex | TODO |
  | Bug fixes | Blair | DONE |
  '''
# ---
# name: TestOrgGolden.test_org_enhanced_features
  '''
  # Weekly meeting

  SCHEDULED: <2025-11-04 Mon 10:00-11:00>

  Meeting agenda items.

  # Recurring task

  Weekly review task that repeats.

  # Completed project

  CLOSED: \[2024-12-01 Sun\]
    SCHEDULED: <2024-11-15 Fri>
    DEADLINE: <2024-12-01 Sun>

  Final deliverables completed.

  # Task with notes

  :LOGBOOK:
    - Note "Started work" \[2025-10-27 Mon 14:30\]
    :END:

  Task with detailed notes.
  '''
# ---
# name: TestPlainTextGolden.test_plaintext_sections
  '''
  Sample Document ==============

  This is an example of plain text that contains a few paragraphs. It should convert to Markdown without any additional formatting.

  Another Section ---------------

  Bullet-style lines: - Item one - Item two

  Numbered-style lines: 1. First 2. Second
  '''
# ---
# name: TestPlainTextGolden.test_plaintext_with_code_block
  '''
  Log Output ==========

  The following snippet mimics a shell transcript:

  $ ls -la total 12 drwxr-xr-x  3 user staff  96 Mar  1 10:00 . drwxr-xr-x 10 user staff 320 Mar  1 09:59 .. -rw-r--r--  1 user staff 120 Mar  1 10:00 README.txt
  '''
# ---
# name: TestRstGolden.test_rst_with_directives
  '''
  # Fixture Document

  > **Note:** This demonstrates typical reStructuredText constructs.

  # Section Heading

  Paragraph with **bold** and *italic* text and a [reference](https://example.com) link.

  Bullet list:

  ```
  - Item one
  - Item two
  ```

  ```python
  def greet(name):
      return f"Hello, {name}!"
  ```

  | Column A | Column B |
  |---|---|
  | Alpha | 1 |
  | Beta | 2 |
  '''
# ---
# name: TestRtfGolden.test_rtf_basic_document
  '''
  Fixture Title

  This paragraph contains **bold** and *italic* text.

  Item one

  Item two

  NameRoleScoreAliceDeveloper95BobDesigner88
  '''
# ---
# name: TestRtfGolden.test_rtf_with_code_block
  '''
  Code Listing

  def hello():
     return 'Hello RTF'
  '''
# ---
# name: TestSourceCodeGolden.test_python_module
  '''
  ```text
  """Example module used in conversion tests."""

  from __future__ import annotations

  class Greeter:
      """Simple greeter with configurable salutation."""

      def __init__(self, salutation: str = "Hello") -> None:
          self.salutation = salutation

      def greet(self, name: str) -> str:
          return f"{self.salutation}, {name}!"

  def main() -> None:
      greeter = Greeter()
      print(greeter.greet("World"))

  if __name__ == "__main__":
      main()
  ```
  '''
# ---
# name: TestSourceCodeGolden.test_source_with_embedded_markdown
  '''
  ```text
  // Example demonstrating converter support for fenced comments.
  /*
  # Heading in comment

  - bullet item
  - another item
  */
  int add(int a, int b) {
      return a + b;
  }
  ```
  '''
# ---
# name: TestTextileGolden.test_textile_complex_document
  '''
  # Comprehensive Test Document

  ## Introduction

  This document demonstrates **all** the *major* features of `Textile` formatting.
   It includes <sup>superscript</sup> and <sub>subscript</sub> text.

  Visit [our website](https://example.com) for more information.

  ## Lists and Tables

  ### Shopping List

  * Fruits
    - Apples
    - Bananas
    - Oranges
  * Vegetables
    - Carrots
    - Broccoli

  ### Product Comparison

  | *.Feature* | .Product A | \_.Product B |
  |---|---|---|
  | **Price** | $99 | $149 |
  | *Warranty* | 1 year | 2 years |
  | `Support` | Email | 24/7 Phone |

  ## Code Examples

  ```
  class Calculator:
      def add(self, a, b):
          return a + b
  ```

  Use the `Calculator` class for basic arithmetic.

  ## Important Information

  > This is a critical note about the system.
  >  It contains multiple paragraphs with **important** information
  >  that users should read carefully.

  ## Visual Elements

  ![System Architecture](architecture.png "System Architecture")

  <hr />

  ## Conclusion

  Thank you for reading this document.
  '''
# ---
# name: TestTextileGolden.test_textile_with_code_blocks
  '''
  # Code Block Test Document

  ## Python Code

  ```
  def factorial(n):
      if n <= 1:
          return 1
      return n * factorial(n - 1)
  ```

  result = factorial(5)
   print(f“Result: \{result\}”)

  ## JavaScript Code

  ```
  function greet(name) {
      console.log(`Hello, ${name}!`);
  }
  ```

  greet(“World”);

  ## Inline Code

  Use `print()` function to display output.

  The `for` loop iterates over items.
  '''
# ---
# name: TestTextileGolden.test_textile_with_formatting
  '''
  # Formatting Test Document

  ## Basic Formatting

  This paragraph contains **bold text**, *italic text*, and `inline code`.

  This paragraph has ***bold and italic text*** combined.

  ## All Heading Levels

  ### Level 3 Heading

  Content under level 3 heading.

  #### Level 4 Heading

  Content under level 4 heading.

  ##### Level 5 Heading

  Content under level 5 heading.

  ###### Level 6 Heading

  Content under level 6 heading.

  ## Advanced Formatting

  Text with <sup>superscript</sup> and <sub>subscript</sub>.

  Text with ~~strikethrough~~ content and underline text.

  ## Block Quote

  > This is a block quote with some important information.
  >  It can span multiple lines and includes **bold** text.

  ## Horizontal Rule

  <hr />

  Content after horizontal rule.
  '''
# ---
# name: TestTextileGolden.test_textile_with_links_and_images
  '''
  # Links and Images Test Document

  ## External Links

  Visit [Example Website](https://www.example.com) for more information.

  You can also check out [Textile Documentation](https://textile-lang.com).

  ## Auto Links

  Automatic link detection: https://www.google.com

  Another auto link: http://github.com

  ## Images

  ![System Architecture Diagram](diagram.png "System Architecture Diagram")

  Inline image: ![Icon](icon.png "Icon") within text.

  ![A beautiful landscape](photo.jpg "A beautiful landscape")
  '''
# ---
# name: TestTextileGolden.test_textile_with_lists
  '''
  # List Test Document

  ## Unordered List

  * First item
  * Second item
  * Third item
    - Nested item 1
    - Nested item 2
  * Fourth item

  ## Ordered List

  1. First item
  2. Second item
  3. Third item
     1. Nested ordered item 1
     2. Nested ordered item 2
  4. Fourth item

  ## Mixed Lists

  1. First ordered item
     - Nested unordered item
     - Another nested item
  2. Second ordered item
  '''
# ---
# name: TestTextileGolden.test_textile_with_tables
  '''
  # Table Test Document

  ## Simple Table

  | *.Name* | .Age | \_.City |
  |---|---|---|
  | Alice Johnson | 25 | New York |
  | Bob Smith | 30 | Los Angeles |
  | Carol White | 28 | Chicago |

  ## Table with Inline Formatting

  | *.Product* | .Status | \_.Price |
  |---|---|---|
  | **Widget A** | *Available* | `$100` |
  | **Widget B** | *Out of Stock* | `$150` |

  ## Table with Complex Content

  | *.SKU* | .Name | \_.Quantity |
  |---|---|---|
  | 001 | Widget A | 50 |
  | 002 | Widget B | 0 |
  | 003 | Widget C | 25 |
  '''
# ---
